# steam-downgrader

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  README.md  package-lock.json  package.json  run-dev.bat  rust-toolchain.toml  vite.config.ts
.github/workflows/: build.yml
docs/: README.md  build-from-source.md  how-it-works.md  privacy.md  troubleshooting.md  usage.md
src/: App.css  App.tsx  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  rollback.rs  settings.rs
src-tauri/src/steam/: applier.rs  archive.rs  auth.rs  changelog.rs  downloader.rs  library.rs  mod.rs  resolver.rs  sidecar.rs  timeline.rs
steam-helper/: DdStubs.cs  Program.cs  steam-helper.csproj
